# c-xilinx-DMA-sample-code---kernel-plugin

./: CMakeLists.txt  README.md  xdma_diag.c  xdma_diag_transfer.c  xdma_diag_transfer.h  xdma_lib.c  xdma_lib.h
kp/: kp_xdma.c  kp_xdma.rc  kp_xdma.vcxproj
kp/WINNT.x86_64/: kp_xdma.sys
